--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500&display=swap');
+
+@import "reset.css";
+@import "variables.css";
+
+/* Components */
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
+
+/* Screens */
+@import "screens/login.css";
+
 body {
   font-family: 'Baloo Da 2', cursive;
 }
-svg {
-  width: 18px
-}
-.status-bar {
-  display: flex;
-  justify-content: center;
-}
-.status-bar__column {
-  width: 33%
-}
-.status-bar__column:first-child span {
-  margin-right: 3px;
-}
-.status-bar__column:first-child {
-  display: flex;
-  align-items: baseline;
-}
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-}
-.status-bar__column:last-child {
-  display: flex;
-  justify-content: flex-end;
-  align-items: baseline;
-}
+
