--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,9 +1,17 @@
 .user-component {
-  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
 }
+.user-component,
 .user-component__column:first-child {
   display: flex;
   align-items: center;
+}
+.user-component__column svg {
+  width: 18px;
+}
+.user-component__column span {
+  font-size: 20px;
 }
 .user-component__avatar {
   width: 70px;
@@ -23,4 +31,22 @@
 .user-component__avatar--xl {
   width: 80px;
   height: 80px;
+}
+.user-component__avatar--sm {
+  width: 60px;
+  height: 60px;
+  border-radius: 25px;
+}
+.user-component__title--not-bold {
+  font-weight: 400;
+}
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.user-component__time {
+  margin-bottom: 5px;
+  display: block;
 }
