--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -20,6 +20,17 @@
   padding-bottom: 3px;
   padding-left: 7px;
 }
+.friends-screen__channel {
+  margin-top: 25px;
+  border-top: var(--main-border);
+  padding-top: 15px;
+}
+.friends-screen__channel-header {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
+}
 
 .friends-screen {
   padding: 0px var(--horizontal-space);
