--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500&display=swap");
 
 @import "reset.css";
 @import "variables.css";
@@ -8,13 +8,18 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 body {
-  color: #1B1B1B;
-  font-family: 'Baloo Da 2', cursive;
+  color: #1b1b1b;
+  font-family: "Baloo Da 2", cursive;
 }
 
+.main-screen {
+  padding: 0px var(--horizontal-space);
+}
