--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -32,3 +32,75 @@
   color: var(--text-silver);
   font-size: 19px;
 }
+
+.open-chat__header {
+  display: flex;
+  justify-content: space-between;
+  color: var(--text-silver);
+  margin-bottom: 20px;
+}
+.open-chat__header span {
+  color: var(--text-silver);
+}
+.open-post {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.open-post__title {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+.open-post__hashtags {
+  text-transform: uppercase;
+  color: var(--text-silver);
+}
+.open-post__members {
+  display: flex;
+  align-items: center;
+}
+.open-post__members img {
+  width: 25px;
+  height: 25px;
+  border-radius: 10px;
+  margin-right: 5px;
+}
+.open-post__member-count {
+  color: var(--text-silver);
+  font-size: 16px;
+}
+.open-post__members .divider {
+  background-color: var(--text-silver);
+  width: 1px;
+  height: 14px;
+  margin: 0px 5px;
+}
+.open-post__member-status {
+  color: magenta;
+}
+.open-post__photo {
+  position: relative;
+}
+.open-post__photo img {
+  width: 120px;
+  height: 120px;
+  border-radius: 10px;
+}
+.open-post__heart-count {
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  padding: 5px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+.open-post__heart-count svg {
+  width: 15px;
+}
+.open-post__heart-count span {
+  font-size: 15px;
+  margin: 0px 3px;
+}
