--- a/css/variables.css
+++ b/css/variables.css
@@ -3,7 +3,11 @@
   --noti-red: #ff6229;
   --text-silver: rgba(0, 0, 0, 0.5);
 
+  --chat-background-color: rgba(171, 193, 209, 1); /* #fabc1d1 */
+  --chat-timestamp-bg-color: rgba(88, 88, 88, 0.3);
+  --chat-timestamp-text-color: rgba(255, 255, 255, 0.7);
   --horizontal-space: 15px;
 
   --main-border: 1px solid rgba(0, 0, 0, 0.1);
+  --sub-border: 1px solid rgba(242, 242, 242, 0.5); /* #f2f2f2 */
 }
