--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -9,6 +9,9 @@
   font-size: 35px;
   font-weight: 600;
 }
+.screen-header__icons svg {
+  width: 35px;
+}
 .screen-header__icons span {
   margin-left: 20px;
   position: relative;
