--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,28 +1,35 @@
 .status-bar {
-    display: flex;
-    justify-content: center;
-    padding: 5px 3px;
-  }
-  .status-bar__column {
-    width: 33%
-  }
-  .status-bar__column:first-child span {
-    margin-right: 3px;
-  }
-  .status-bar__column:first-child {
-    display: flex;
-    align-items: baseline;
-  }
-  .status-bar__column:nth-child(2) {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-  }
-  .status-bar__column:last-child {
-    display: flex;
-    justify-content: flex-end;
-    align-items: baseline;
-  }
-  .status-bar__column > svg {
-    width: 18px
-  }
+  background-color: inherit;
+  min-width: 320px;
+  width: 100%;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  padding: 5px 3px;
+  position: fixed;
+  top: 0;
+  box-sizing: border-box;
+}
+.status-bar__column {
+  width: 33%;
+}
+.status-bar__column:first-child span {
+  margin-right: 3px;
+}
+.status-bar__column:first-child {
+  display: flex;
+  align-items: baseline;
+}
+.status-bar__column:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.status-bar__column:last-child {
+  display: flex;
+  justify-content: flex-end;
+  align-items: baseline;
+}
+.status-bar__column > svg {
+  width: 18px;
+}
