--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -8,6 +8,9 @@
   align-items: center;
 }
 .user-component__column svg {
+  width: 35px;
+}
+.user-component__column .open-icon {
   width: 18px;
 }
 .user-component__column span {
@@ -49,4 +52,13 @@
 .user-component__time {
   margin-bottom: 5px;
   display: block;
+}
+.user-component__text svg {
+  width: 18px;
+  margin-left: 5px;
+  color: var(--noti-red);
+}
+.user-component__text div {
+  display: flex;
+  align-items: center;
 }
