--- a/css/styles.css
+++ b/css/styles.css
@@ -9,15 +9,22 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/icon-row.css";
+@import "components/alt-screen-header.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
 
 body {
+  min-width: 320px;
   color: #1b1b1b;
   font-family: "Baloo Da 2", cursive;
+  margin-top: 32px;
 }
 
 .main-screen {
