--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,5 +1,5 @@
 .status-bar {
-  background-color: inherit;
+  background-color: white;
   min-width: 320px;
   width: 100%;
   height: 32px;
@@ -9,6 +9,7 @@
   position: fixed;
   top: 0;
   box-sizing: border-box;
+  z-index: 100;
 }
 .status-bar__column {
   width: 33%;
