--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -5,16 +5,27 @@
 #chat-screen .alt-screen-header {
   background-color: inherit;
   position: fixed;
-  top: 33px;
+  top: 32px;
   width: 100%;
   box-sizing: border-box;
 }
 
+@keyframes fadeIn {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
 .main-chat {
   margin-top: 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn 0.4s linear;
 }
 .chat__timestamp {
   color: var(--chat-timestamp-text-color);
@@ -24,10 +35,21 @@
   border-radius: 16px;
 }
 
+@keyframes fadeInFromLeft {
+  from {
+    transform: translateX(-30px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
 .message-row {
   width: 100%;
   display: flex;
   margin-bottom: 25px;
+  animation: fadeInFromLeft 0.4s linear;
 }
 .message-row img {
   width: 50px;
@@ -57,8 +79,19 @@
   font-size: 16px;
 }
 
+@keyframes fadeInFromRight {
+  from {
+    transform: translateX(30px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
 .message-row--own {
   justify-content: flex-end;
+  animation: fadeInFromRight 0.4s linear;
 }
 .message-row--own .message__bubble {
   background-color: var(--kokoa-yellow);
@@ -81,10 +114,10 @@
   padding: 5px 25px;
   align-items: center;
   box-sizing: border-box;
+  transition: transform 0.3s ease-in-out;
 }
 .reply__column {
-  display: flex;
-  justify-content: center;
+  padding-bottom: 2px;
 }
 .reply .reply__column:first-child {
   width: 8%;
@@ -99,6 +132,8 @@
   padding-left: 10px;
   border: var(--main-border);
   border-radius: 20px;
+  box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
 }
 .reply__column svg {
   width: 30px;
@@ -110,20 +145,57 @@
 .reply__column:last-child > svg {
   right: 50px;
   opacity: 0.4;
-  right: 55px;
-  top: 7px;
+  right: 60px;
+  top: 5px;
 }
 
 .reply__column button {
   background-color: var(--kokoa-yellow);
   border: none;
-  width: 38px;
-  height: 38px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
   right: 3px;
-  top: 3px;
+  top: 1px;
+}
+@keyframes scaling {
+  0% {
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+  }
+}
+.message-row img:hover {
+  animation: scaling 1s ease-in-out infinite;
+}
+
+.reply__column button:focus,
+.reply__column button:active {
+  outline: none;
+}
+
+.reply .reply__column:first-child,
+.reply svg,
+.reply button {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within svg,
+.reply:focus-within button {
+  opacity: 0;
+}
+.reply:focus-within {
+  transform: translateY(80px);
+}
+
+.reply input:focus {
+  width: 98vw;
+  transform: translateX(-9.3%) translateY(-80px);
 }
