--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,3 +1,6 @@
+.find-body {
+  height: 200vh;
+}
 .recommended-friends {
   margin: 25px 0px;
   padding: 25px 0px;
@@ -86,4 +89,20 @@
 .open-post__heart-count span {
   font-size: 15px;
   margin: 0px 3px;
+}
+@keyframes heartBeat {
+  0% {
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.3);
+  }
+  100% {
+    transform: none;
+  }
+}
+.open-post__heart-count:hover > svg {
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
 }
