--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -1,55 +1,65 @@
 .welcome-header {
-    margin: 75px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .welcome-header__title {
-    margin-bottom: 30px;
-    font-size: 30px;
-    font-weight: 500;
-  }
-  .welcome-header__text {
-    width: 70%;
-    font-size: 20px;
-    opacity: 0.7;
-  }
-  
-  #login-form {
-    display: flex;
-    flex-direction: column;
-    margin: 0px 30px;
-  }
-  #login-form input {
-    border: none;
-    padding: 20px 0px;
-    font-size: 20px;
-  }
-  #login-form input:nth-child(2) {
-    margin-bottom: 25px;
-  }
-  #login-form input:not([type="submit"]) {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    transition: border-color .3s ease-in-out;
-  }
-  #login-form input::placeholder {
-    color: rgba(0, 0, 0, 0.4);
-  }
-  #login-form input:focus {
-    border-color: var(--kokoa-yellow);
-  }
-  #login-form input[type="submit"] {
-    cursor: pointer;
-    margin: 6px 0px;
-    border-radius: 5px;
-    padding: 20px 0px;
-    font-size: 18px;
-  }
-  #login-form a {
-    margin: 20px 0px;
-    text-align: center;
-    text-decoration: none;
-    color: inherit;
-    font-size: 18px;
-  }
+  margin: 75px 0px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.welcome-header__title {
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: 500;
+}
+.welcome-header__text {
+  width: 70%;
+  font-size: 20px;
+  opacity: 0.7;
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 30px;
+}
+#login-form input {
+  border: none;
+  padding: 20px 0px;
+  font-size: 20px;
+}
+#login-form input:nth-child(2) {
+  margin-bottom: 25px;
+}
+#login-form input:not([type="submit"]) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  transition: border-color 0.3s ease-in-out;
+}
+#login-form input::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+#login-form input:focus {
+  border-color: var(--kokoa-yellow);
+}
+#login-form input[type="submit"] {
+  cursor: pointer;
+  margin: 6px 0px;
+  border-radius: 5px;
+  padding: 20px 0px;
+  font-size: 18px;
+}
+#login-form > div {
+  background-color: #efefef;
+  width: inherit;
+  margin: 6px 0px;
+  border-radius: 5px;
+  padding: 20px 0px;
+  font-size: 18px;
+  color: var(--text-disable);
+  text-align: center;
+}
+#login-form a {
+  margin: 20px 0px;
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  font-size: 18px;
+}
