--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 @import "components/badge.css";
 @import "components/icon-row.css";
 @import "components/alt-screen-header.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -29,4 +30,12 @@ body {
 
 .main-screen {
   padding: 0px var(--horizontal-space);
+}
+#for-scroll {
+  width: 100vh;
+  height: 75px;
+  background-color: transparent;
+}
+::-webkit-scrollbar {
+  display: none;
 }
