--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ body {
   color: #1b1b1b;
   font-family: "Baloo Da 2", cursive;
   margin-top: 32px;
+  background-color: white;
 }
 
 .main-screen {
