--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -19,7 +19,7 @@
 .user-component__avatar {
   width: 70px;
   height: 70px;
-  border-radius: 43%;
+  border-radius: 33px;
   margin-right: 20px;
 }
 .user-component__title {
@@ -78,4 +78,9 @@
   color: var(--kokoa-yellow);
   padding-top: 3px;
   z-index: 3;
+}
+.user-component__avatar--svg {
+  background-color: whitesmoke;
+  padding: 25px;
+  box-sizing: border-box;
 }
