Modify page size issue

--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,6 +1,6 @@
 .nav {
   background-color: #f9f9fa;
-  width: 100%;
+  width: 100vw;
   height: 75px;
   padding: 15px 40px;
   border-top: 1px solid rgba(121, 121, 121, 0.1);
