--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
 
 body {
   min-width: 320px;
+  width: 100vw;
   color: #1b1b1b;
   font-family: "Baloo Da 2", cursive;
   margin-top: 32px;
@@ -33,7 +34,7 @@ body {
   padding: 0px var(--horizontal-space);
 }
 #for-scroll {
-  width: 100vh;
+  width: 100vw;
   height: 75px;
   background-color: transparent;
 }
